<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="calc.com.davidetruong.tcalculator.MainActivity">

    <LinearLayout
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_result"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="20dp"
                android:textSize="44sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingEnd="4dp"
            android:paddingStart="4dp">

            <Button
                android:id="@+id/btn_seven"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="30sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_eight"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_nine"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_dash"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/dash"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingEnd="4dp"
            android:paddingStart="4dp">

            <Button
                android:id="@+id/btn_four"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="30sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_five"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_six"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_multi"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/multi"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingEnd="4dp"
            android:paddingStart="4dp">

            <Button
                android:id="@+id/btn_one"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_two"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_three"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_minus"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingEnd="4dp"
            android:paddingStart="4dp">

            <Button
                android:id="@+id/btn_clear"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/clear"
                android:textSize="30sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_zero"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_dot"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_plus"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_equal"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/equal"
                android:textSize="44sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
